--- a/content/resources/21l-705f06-th.md
+++ b/content/resources/21l-705f06-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: 'Cropped photograph of an etching of Herman Melville after a portrait
   by Joseph O. Eaton. (Image courtesy of the Library of Congress, Prints and Photograghs
   Division [reproduction number: LC-USZ62-135949 (b&w film copy neg.)])'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21l-705-major-authors-after-the-masterpiece-novels-by-melville-twain-faulkner-and-morrison-fall-2006/f965a9e34ec3185d4639547ea3bc6a6b_21l-705f06-th.jpg
+file: /media/courses/21l-705-major-authors-after-the-masterpiece-novels-by-melville-twain-faulkner-and-morrison-fall-2006/f965a9e34ec3185d4639547ea3bc6a6b_21l-705f06-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Photograph of an etching of Herman Melville after a portrait by Joseph
@@ -12,6 +12,8 @@ image_metadata:
     (b&w film copy neg.)\])'
   credit: ''
   image-alt: A portrait of Herman Melville.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Herman Melville (thumbnail)
 uid: f965a9e3-4ec3-185d-4639-547ea3bc6a6b
