Sync all content

--- a/content/resources/21l-705f05-th.md
+++ b/content/resources/21l-705f05-th.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: ''
 learning_resource_types: []
 ocw_type: OCWImage
+parent_uid: null
 resourcetype: Image
 title: Woman (thumbnail)
 uid: 281cb53d-6c84-f7e6-1ed2-4cb9d041846d
