--- a/content/resources/21l-705f06-th.md
+++ b/content/resources/21l-705f06-th.md
@@ -14,6 +14,7 @@ image_metadata:
   image-alt: A portrait of Herman Melville.
 learning_resource_types: []
 ocw_type: OCWImage
+parent_uid: null
 resourcetype: Image
 title: Herman Melville (thumbnail)
 uid: f965a9e3-4ec3-185d-4639-547ea3bc6a6b
