--- a/content/resources/21l-705f06.md
+++ b/content/resources/21l-705f06.md
@@ -14,6 +14,7 @@ image_metadata:
   image-alt: A portrait of Herman Melville.
 learning_resource_types: []
 ocw_type: OCWImage
+parent_uid: null
 resourcetype: Image
 title: Herman Melville
 uid: 8cf1c93f-125a-fad5-9275-9f0c2c937812
