--- a/content/resources/21l-705f05-th.md
+++ b/content/resources/21l-705f05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Photograph of a woman.
-file: /media/courses/21l-705-major-authors-after-the-masterpiece-novels-by-melville-twain-faulkner-and-morrison-fall-2006/281cb53d6c84f7e61ed24cb9d041846d_21l-705f05-th.jpg
+file: /courses/21l-705-major-authors-after-the-masterpiece-novels-by-melville-twain-faulkner-and-morrison-fall-2006/281cb53d6c84f7e61ed24cb9d041846d_21l-705f05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: ''
@@ -9,8 +9,9 @@ image_metadata:
   image-alt: ''
 learning_resource_types: []
 ocw_type: OCWImage
-parent_uid: null
 resourcetype: Image
 title: Woman (thumbnail)
 uid: 281cb53d-6c84-f7e6-1ed2-4cb9d041846d
 ---
+Photograph of a woman.
+
