--- a/content/resources/21l-705f06.md
+++ b/content/resources/21l-705f06.md
@@ -3,7 +3,7 @@ content_type: resource
 description: 'Photograph of an etching of Herman Melville after a portrait by Joseph
   O. Eaton. (Image courtesy of the Library of Congress, Prints and Photograghs Division
   [reproduction number: LC-USZ62-135949 (b&w film copy neg.)])'
-file: /media/courses/21l-705-major-authors-after-the-masterpiece-novels-by-melville-twain-faulkner-and-morrison-fall-2006/8cf1c93f125afad592759f0c2c937812_21l-705f06.jpg
+file: /courses/21l-705-major-authors-after-the-masterpiece-novels-by-melville-twain-faulkner-and-morrison-fall-2006/8cf1c93f125afad592759f0c2c937812_21l-705f06.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Photograph of an etching of Herman Melville after a portrait by Joseph
@@ -14,8 +14,9 @@ image_metadata:
   image-alt: A portrait of Herman Melville.
 learning_resource_types: []
 ocw_type: OCWImage
-parent_uid: null
 resourcetype: Image
 title: Herman Melville
 uid: 8cf1c93f-125a-fad5-9275-9f0c2c937812
 ---
+Photograph of an etching of Herman Melville after a portrait by Joseph O. Eaton. (Image courtesy of the Library of Congress, Prints and Photograghs Division [reproduction number: LC-USZ62-135949 (b&w film copy neg.)])
+
