Sync all content

--- a/content/resources/21l-705f06.md
+++ b/content/resources/21l-705f06.md
@@ -13,10 +13,10 @@ image_metadata:
   credit: ''
   image-alt: A portrait of Herman Melville.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Herman Melville
 uid: 8cf1c93f-125a-fad5-9275-9f0c2c937812
 ---
 Photograph of an etching of Herman Melville after a portrait by Joseph O. Eaton. (Image courtesy of the Library of Congress, Prints and Photograghs Division [reproduction number: LC-USZ62-135949 (b&w film copy neg.)])
-
