--- a/content/resources/21l-705f05-th.md
+++ b/content/resources/21l-705f05-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: ''
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Woman (thumbnail)
 uid: 281cb53d-6c84-f7e6-1ed2-4cb9d041846d
 ---
 Photograph of a woman.
-
