--- a/content/resources/21l-705f06-th.md
+++ b/content/resources/21l-705f06-th.md
@@ -13,10 +13,10 @@ image_metadata:
   credit: ''
   image-alt: A portrait of Herman Melville.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Herman Melville (thumbnail)
 uid: f965a9e3-4ec3-185d-4639-547ea3bc6a6b
 ---
 Cropped photograph of an etching of Herman Melville after a portrait by Joseph O. Eaton. (Image courtesy of the Library of Congress, Prints and Photograghs Division [reproduction number: LC-USZ62-135949 (b&w film copy neg.)])
-
