--- a/content/resources/21l-705f06-th.md
+++ b/content/resources/21l-705f06-th.md
@@ -4,6 +4,7 @@ description: 'Cropped photograph of an etching of Herman Melville after a portra
   by Joseph O. Eaton. (Image courtesy of the Library of Congress, Prints and Photograghs
   Division [reproduction number: LC-USZ62-135949 (b&w film copy neg.)])'
 file: /courses/21l-705-major-authors-after-the-masterpiece-novels-by-melville-twain-faulkner-and-morrison-fall-2006/f965a9e34ec3185d4639547ea3bc6a6b_21l-705f06-th.jpg
+file_size: 8657
 file_type: image/jpeg
 image_metadata:
   caption: 'Photograph of an etching of Herman Melville after a portrait by Joseph
