Sync all content

--- a/content/resources/21l-705f06-th.md
+++ b/content/resources/21l-705f06-th.md
@@ -8,9 +8,9 @@ file_size: 8657
 file_type: image/jpeg
 image_metadata:
   caption: 'Photograph of an etching of Herman Melville after a portrait by Joseph
-    O. Eaton. (Image courtesy of the {{% resource_link "e6e40489-33f9-4976-9594-08438e54348c"
-    "Library of Congress, Prints and Photographs Division" %}} \[reproduction number:
-    LC-USZ62-135949 (b&w film copy neg.)\])'
+    O. Eaton. (Image courtesy of the [Library of Congress, Prints and Photographs
+    Division](http://lcweb2.loc.gov/pp/pphome.html) \[reproduction number: LC-USZ62-135949
+    (b&w film copy neg.)\])'
   credit: ''
   image-alt: A portrait of Herman Melville.
 learning_resource_types: []
